src/pages/pageCreator/style.scss
.page {
    height: 250px;
    overflow: auto;
    overflow-x: hidden;
    padding-top: 8px;
    &::-webkit-scrollbar {
      width: 15px;
    }
    &::-webkit-scrollbar-track {
        background: #2c2e3b;
        border-top: 0.5px solid #191A21;
        border-left: 0.5px solid #191A21;
    }
    &::-webkit-scrollbar-thumb {
        background: transparent;
    }
    &::-webkit-scrollbar-thumb:hover {
        background: #424450;
    }
}
.line{
    display: flex;
    height: 20px;
}
.n_line{
    padding: 0px 10px;
    width: 20px;
    text-align: end;
    margin-right: 10px;
}
.key_text{
    color: #8be9fd;
    &.moved{
        padding-left: 15px;
        border-left: 1px solid #44475a;
    }
}
.label_text{
    color: #f1fa8c;
    margin-left: 3px;
}
.dots {
    color: #ff79c6;
    margin-right: 5px;
    margin-left: 1px;
}
.dash{
    color:  #ff79c6;
    margin-right: 5px;
}

